[gd_scene load_steps=5 format=3 uid="uid://b0x8jqyqj0x0r"]

[ext_resource type="Script" path="res://Main.gd" id="1_0x8jq"]
[ext_resource type="PackedScene" uid="uid://c8x9k2y3z4w5v6" path="res://GameModeSelector.tscn" id="2_3x4y"]
[ext_resource type="PackedScene" uid="uid://d9x0k3y6z7w8v1" path="res://ProgressIndicator.tscn" id="3_6x7y"]
[ext_resource type="PackedScene" uid="uid://e0x1k4y7z8w9v2" path="res://Popup.tscn" id="4_7x8y"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x8jq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.827, 0.827, 0.827, 1)

[node name="HeaderContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 140.0

[node name="TitleSection" type="VBoxContainer" parent="HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="HeaderContainer/TitleSection"]
layout_mode = 2
text = "Spanish Verb Conjugation Game"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)

[node name="VerbLabel" type="Label" parent="HeaderContainer/TitleSection"]
layout_mode = 2
text = "Match the conjugation with the pronoun for..."
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)

[node name="PreviousScoreLabel" type="Label" parent="HeaderContainer/TitleSection"]
layout_mode = 2
text = "Previous Score: 0"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)

[node name="GameModeSelector" parent="HeaderContainer/TitleSection" instance=ExtResource("2_3x4y")]
layout_mode = 2

[node name="ProgressIndicator" parent="HeaderContainer" instance=ExtResource("3_6x7y")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 150.0
offset_right = -50.0
offset_bottom = -50.0

[node name="TopHSeparator" type="HSeparator" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_top = 140.0
offset_bottom = 140.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GameArea" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PronounSection" type="VBoxContainer" parent="VBoxContainer/GameArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PronounLabel" type="Label" parent="VBoxContainer/GameArea/PronounSection"]
layout_mode = 2
text = "Spanish Pronouns"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)

[node name="PronounGrid" type="GridContainer" parent="VBoxContainer/GameArea/PronounSection"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="EnglishSection" type="VBoxContainer" parent="VBoxContainer/GameArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnglishLabel" type="Label" parent="VBoxContainer/GameArea/EnglishSection"]
layout_mode = 2
text = "English Pronouns"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)

[node name="EnglishGrid" type="GridContainer" parent="VBoxContainer/GameArea/EnglishSection"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="yo" type="Button" parent="VBoxContainer/GameArea/PronounSection/PronounGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
text = "yo..."

[node name="tu" type="Button" parent="VBoxContainer/GameArea/PronounSection/PronounGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
text = "tu..."

[node name="el" type="Button" parent="VBoxContainer/GameArea/PronounSection/PronounGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
text = "el..."

[node name="nosotros" type="Button" parent="VBoxContainer/GameArea/PronounSection/PronounGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
text = "nosotros..."

[node name="vosotros" type="Button" parent="VBoxContainer/GameArea/PronounSection/PronounGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
text = "vosotros..."

[node name="ellos" type="Button" parent="VBoxContainer/GameArea/PronounSection/PronounGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
text = "ellos..."

[node name="yo_eng" type="Button" parent="VBoxContainer/GameArea/EnglishSection/EnglishGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
text = "I..."

[node name="tu_eng" type="Button" parent="VBoxContainer/GameArea/EnglishSection/EnglishGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
text = "You..."

[node name="el_eng" type="Button" parent="VBoxContainer/GameArea/EnglishSection/EnglishGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
text = "He/She..."

[node name="nosotros_eng" type="Button" parent="VBoxContainer/GameArea/EnglishSection/EnglishGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
text = "We..."

[node name="vosotros_eng" type="Button" parent="VBoxContainer/GameArea/EnglishSection/EnglishGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
text = "You all..."

[node name="ellos_eng" type="Button" parent="VBoxContainer/GameArea/EnglishSection/EnglishGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
text = "They..."


[node name="VSeparator" type="VSeparator" parent="VBoxContainer/GameArea"]
layout_mode = 2

[node name="ConjugationSection" type="VBoxContainer" parent="VBoxContainer/GameArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConjugationLabel" type="Label" parent="VBoxContainer/GameArea/ConjugationSection"]
layout_mode = 2
text = "Conjugations"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)

[node name="ConjugationGrid" type="GridContainer" parent="VBoxContainer/GameArea/ConjugationSection"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Popup" parent="." instance=ExtResource("4_7x8y")]
layout_mode = 1

